--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <header>
       <nav>
         <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="#">Page 3</a>
-        <a href="#">Page 4</a>
-        <a href="#">Page 5</a>
-        <a href="#">Page 6</a>
+        <a href="one.html">Page 2</a>
+        <a href="two.html">Page 3</a>
+        <a href="three.html">Page 4</a>
+        <a href="four.html">Page 5</a>
+        <a href="five.html">Page 6</a>
       </nav>
     </header>
     <main>
